# programming_toolkit

./: .gitignore  CMakeLists.txt  README.md  installPTK.sh
cmake/: PtkSetGlobalProperties.cmake  ptkBuildPlugin.cmake  ptkPlugin.cmake
cpp/: CMakeLists.txt
cpp/ptk/: CMakeLists.txt  ptk.h  ptk.h.in  ptkConfig.cmake.in  ptkConfig.h  ptkConfig.h.in  version.txt
cpp/ptk/common/: Algorithm.cpp  Algorithm.hpp  CMakeLists.txt  RunnableModule.hpp  Time.hpp  colour-map.h  colour.h  is-set.h
cpp/ptk/common/runnable/: RunnableModule.hpp  RunnableOptions.hpp  RunnableResult.hpp
cpp/ptk/core/: CMakeLists.txt  ThreadSafeQueue.h  impl-logger.cpp  impl-logger.hpp  package.cpp  package.hpp  program.cpp  program.h
cpp/ptk/plugins/: CMakeLists.txt  LibraryLoader.cpp  LibraryLoader.hpp  README.md  details.cpp  details.hpp  naming.cpp  naming.hpp  plugin.cpp  plugin.hpp  register.hpp
cpp/ptk/utilities/: CMakeLists.txt  accumulator.h  fileSystem.cpp  fileSystem.hpp  logging-common.h  logging.h  macros.h  outputHandler.hpp  program.cpp  program.h  statistics.h  timer.h
cpp/ptk/utilities/impl/: fileHandler.cpp  logging-common.cpp  logging.cpp  loggingHandler.cpp  outputHandler.cpp
cpp/ptk/utils/: CMakeLists.txt  logging-common.h  logging.h  macros.h  statistics.cpp  statistics.h
cpp/tests/: CMakeLists.txt  Main.cpp
cpp/tests/common/: CMakeLists.txt  IsSet.cpp
docs/: Doxyfile
examples/cpp/: CMakeLists.txt  plugin_main.cpp  runnable_main.cpp  statistics.cpp
examples/cpp/common/: CMakeLists.txt  RunnableTest.hpp
examples/cpp/plugins/: CMakeLists.txt  testPlugin.cpp  testPlugin.hpp
examples/python/tools/: README.md  launch.yaml
output_folder/: .gitignore
python/: README.md  requirements.txt  setup.py  test.py
python/examples/: launch.yaml  test.py
python/ptk/: __init__.py  logging.py  time.py  utils.py
python/ptk/common/: README.md  __init__.py  configuration.py  exceptions.py  patterns.py  process.py  time.py  types.py
python/ptk/core/: README.md  __init__.py  file_system.py  iostream.py  process.py
python/ptk/cv/: __init__.py  colour_thresholding.py
python/tools/: README.md  ptk_cv_thresholding.py  ptklaunch.py
scripts/: apt_unavailable.sh
